<resources>
    <string name="app_name">Stretcher App</string>
    <string name="stretcher_app">Stretcher App</string>
    <string name="no__registrado">No estás Registrado?</string>
    <string name="olvido_pass">Olvidé mi Contraseña</string>
    <string name="password_text">Password</string>
    <string name="username_txt">Username</string>
    <string name="pie">view</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="apellidos">Apellidos</string>
    <string name="nombre">Nombre</string>
    <string name="recupera_pass">Recuperación de Contraseña</string>
    <string name="recuperar">Recuperar</string>
    <string name="nueva_contrasena">Nueva Contraseña</string>
    <string name="repita_contrasena">Repita Contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nuevo">Nuevo</string>
    <string name="servicios">Servicios</string>
    <string name="camilleros">Camilleros</string>
    <string name="historico">Histórico</string>
    <string name="perfil">Perfil</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="regresa">Regresa a Origen</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="h_clinica">H. Clinica</string>
    <string name="documento">Documento</string>
    <string name="guardar">guardar</string>
    <string name="solicitud_de_servicio">Solicitud de Servicio</string>
    <string name="camera">camera</string>
    <string name="imagen">imagen</string>
    <string name="imagen_de_la_orden">Imagen de la Orden</string>
</resources>