<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreaServicio1">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/imagen_de_la_orden"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serv_recomendacion" />

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/botones"
        android:text="@string/guardar"
        android:textColor="@color/ic_registro_background"
        android:textColorHint="@color/ic_registro_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ordenImagen"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_camara" />

    <EditText
        android:id="@+id/serv_documento"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/txt_username"
        android:drawableStart="@drawable/ic_baseline_contacts_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/documento"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toStartOf="@+id/serv_destino"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/serv_hclinica"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/txt_username"
        android:drawableStart="@drawable/ic_baseline_perm_contact_calendar_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/h_clinica"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/regresa"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/serv_retorna"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serv_origin" />

    <EditText
        android:id="@+id/serv_origin"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/txt_username"
        android:drawableStart="@drawable/ic_baseline_start_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/origen"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:selectAllOnFocus="false"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serv_nombres"
        tools:ignore="TextContrastCheck" />


    <EditText
        android:id="@+id/serv_recomendacion"
        android:layout_width="300dp"
        android:layout_height="59dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/txt_username"

        android:drawableStart="@drawable/ic_baseline_assignment_late_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/recomendaciones"
        android:inputType="textMultiLine"

        android:lines="6"
        android:minHeight="48dp"
        android:overScrollMode="always"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/serv_nombres"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/txt_username"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serv_documento"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <RadioGroup
        android:id="@+id/serv_retorna"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serv_destino">

        <RadioButton
            android:id="@+id/radioSi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/si" />

        <RadioButton
            android:id="@+id/radioNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no" />

    </RadioGroup>

    <EditText
        android:id="@+id/serv_destino"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:background="@drawable/txt_username"
        android:drawableStart="@drawable/ic_baseline_fmd_good_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/destino"
        android:inputType="none|text"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serv_nombres"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/solicitud_de_servicio"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_camara"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_baseline_photo_camera_24"
        android:contentDescription="@string/camera"
        android:scaleX="0.7"
        app:layout_constraintEnd_toStartOf="@+id/ordenImagen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:tint="@color/azul2"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/ordenImagen"
        android:layout_width="127dp"
        android:layout_height="119dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/ic_baseline_account_circle_24"
        android:contentDescription="@string/imagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serv_recomendacion"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck,ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>