<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NauevaPassActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NauevaPassActivity">

        <Button
            android:id="@+id/recupera2"
            android:layout_width="130dp"
            android:layout_height="53dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/botones"
            android:text="@string/recuperar"
            android:textColor="@color/ic_registro_background"
            app:layout_constraintBottom_toBottomOf="@+id/view9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/pass3"
            android:layout_width="232dp"
            android:layout_height="49dp"
            android:layout_marginTop="36dp"
            android:autofillHints=""
            android:background="@drawable/txt_username"
            android:drawableStart="@drawable/ic_baseline_password_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/repita_contrasena"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textColorHint="#7986CB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="232dp"
            android:layout_height="49dp"
            android:layout_marginTop="112dp"
            android:autofillHints=""
            android:background="@drawable/txt_username"
            android:drawableStart="@drawable/ic_baseline_password_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/nueva_contrasena"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textColorHint="#7986CB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view10" />

        <view
            android:id="@+id/view10"
            class="androidx.appcompat.widget.ActionMenuView"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/wave__5_"
            android:filterTouchesWhenObscured="false"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/recupera_pass"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <view
            android:id="@+id/view9"
            class="androidx.appcompat.widget.ActionMenuView"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/pie"
            android:filterTouchesWhenObscured="false"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>